--- a/emitter/Cargo.toml
+++ b/emitter/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
-name = "pulldown-kdl-emitter"
+name = "emitter"
 version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-pulldown-kdl = { version = "0.1.0", path = "../", features = ["debug"] }
+pulldown-kdl = { version = "0.1.0", path = "../pulldown-kdl", features = ["debug"] }
