Improve errors, rewrite scripts on python

--- a/pulldown-kdl/Cargo.toml
+++ b/pulldown-kdl/Cargo.toml
@@ -9,4 +9,5 @@ debug = []
 serde = ["dep:serde"]
 
 [dependencies]
+miette = "7.4.0"
 serde = { version = "1.0.215", features = ["derive"], optional = true }
