--- a/pulldown-kdl/Cargo.toml
+++ b/pulldown-kdl/Cargo.toml
@@ -10,4 +10,5 @@ serde = ["dep:serde"]
 
 [dependencies]
 miette = "7.4.0"
+ownable = "0.6.2"
 serde = { version = "1.0.215", features = ["derive"], optional = true }
